<resources>
    <string name="app_name">Udhaar Manager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">TITLE</string>
    <string name="text_save_transaction">Save Transaction</string>
    <string name="text_ui_mode">UI Mode</string>
    <string name="text_total_income">You Will Give</string>
    <string name="text_total_expense">You Will Receive</string>
    <string name="text_total_balance">Total Balance</string>
    <string name="text_recent_transactions">Recent Transactions</string>
    <string name="text_all_transactions">All Transactions</string>
    <string name="text_view_all">View all</string>
    <string name="text_expense_when">When</string>
    <string name="text_expense_amount">Amount</string>
    <string name="text_expense_transaction_type">Transaction type</string>
    <string name="text_expense_tag">Tag</string>
    <string name="text_expense_note">Note</string>
    <string name="text_expense_add_transaction">Save Transaction</string>
    <string name="text_expense_rupees">₹</string>
    <string name="success_expense_saved">Transaction saved successfully</string>
    <string name="success_transaction_delete">Transaction deleted successfully!</string>
    <string name="text_title">Title</string>
    <string name="text_about">About</string>
    <string name="text_filter">Filter</string>
    <string name="text_edit">Edit</string>
    <string name="text_createdAt">Created At</string>
    <string name="text_youWillGet">you will get</string>
    <string name="text_youWillGive">you will give</string>

    <!--  About -->
    <string name="text_about_visit_title">Visit</string>
    <string name="text_app_version">v%s (%d)</string>
    <string name="text_share_as_text">Share as Text</string>
    <string name="text_share_as_image">Share as Image</string>
    <string name="text_delete">Delete</string>
    <string name="text_share">Share</string>

    <!-- share transaction -->
    <string name="share_message">Title: %s \nAmount: %s, \nTransaction-Type: %s, \nTag: %s, \nDate: %s, \nNote: %s, \nCreatedAt: %s o</string>
    <string name="text_transaction_empty_title">No Transaction Yet!</string>
    <string name="text_transaction_empty_desc">After your first transaction you will be able to view it here</string>
    <string name="add_button">Add Transactor</string>
    <string name="name">Name</string>
    <string name="text_expected_return">Expected Return</string>
    <string name="borrowed_on">Borrowed ON</string>
    <string name="expected_return_on">Expected Return ON</string>

    <!-- login -->
    <string name="google_login">Google</string>
    <string name="facebook_login">Facebook</string>
    <string name="twitter_login">Twitter</string>
    <string name="email_login">Email</string>
    <string name="phone_login">Phone</string>
    <string name="search">Search</string>
    <string name="text_no_transaction_yet">No transaction yet!</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_register">Register</string>
    <string name="text_login">Login</string>

</resources>