<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <TextView
        android:id="@+id/title_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/amount_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_expense_amount" />

    <TextView
        android:id="@+id/amount_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/transactionType_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_expense_transaction_type" />

    <TextView
        android:id="@+id/transactionType_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tag_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_expense_tag" />

    <TextView
        android:id="@+id/tag_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/when_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_expense_when" />

    <TextView
        android:id="@+id/when_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/note_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_expense_note" />

    <TextView
        android:id="@+id/note_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/createdAt_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_createdAt"/>

    <TextView
        android:id="@+id/createdAt_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>