<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/given_card_view"
            android:layout_width="0dp"
            android:layout_height="124dp"
            android:layout_margin="@dimen/dimen_4"
            app:cardBackgroundColor="@color/surface"
            app:cardElevation="@dimen/dimen_0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/given_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/dimen_12"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/income_symbol" />

                <TextView
                    android:id="@+id/given_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_12"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center_horizontal"
                    android:text="@string/text_total_income"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

                <TextView
                    android:id="@+id/given_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_12"
                    android:layout_marginTop="@dimen/dimen_12"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="start"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textStyle="bold"
                    tools:text="$23,103" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/taken_card_view"
            android:layout_width="0dp"
            android:layout_height="124dp"
            android:layout_margin="@dimen/dimen_8"
            app:cardBackgroundColor="@color/surface"
            app:cardElevation="@dimen/dimen_0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/taken_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/dimen_12"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/expense_symbol" />

                <TextView
                    android:id="@+id/taken_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_12"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center_horizontal"
                    android:text="@string/text_total_expense"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

                <TextView
                    android:id="@+id/taken_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_12"
                    android:layout_marginTop="@dimen/dimen_12"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="start"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textStyle="bold"
                    tools:text="$23,103" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
